--- a/package.json
+++ b/package.json
@@ -7,22 +7,16 @@
     "serve": "vite preview",
     "lint-fix": "eslint --fix --ext .js --ext .ts --ext .jsx --ext .vue src/"
   },
-  "config": {
-    "commitizen": {
-      "path": "node_modules/cz-conventional-changelog"
-    }
-  },
   "dependencies": {
-    "@types/qs": "^6.9.6",
+    "@types/qs": "^6.9.7",
     "@vueuse/core": "^4.11.0",
     "ant-design-vue": "^2.2.2",
     "axios": "^0.21.1",
-    "cz-conventional-changelog": "^3.3.0",
     "less": "^4.1.1",
     "less-loader": "^8.1.1",
     "pinia": "^2.0.0-rc.4",
     "qs": "^6.10.1",
-    "vue": "^3.2.2",
+    "vue": "next",
     "vue-router": "^4.0.0-beta.13"
   },
   "devDependencies": {
@@ -32,8 +26,8 @@
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
-    "@vitejs/plugin-vue": "^1.0.4",
-    "@vue/compiler-sfc": "^3.2.2",
+    "@vitejs/plugin-vue": "latest",
+    "@vue/compiler-sfc": "latest",
     "autoprefixer": "^10.2.5",
     "dotenv": "^8.2.0",
     "eslint": "^7.30.0",
@@ -45,9 +39,9 @@
     "prettier": "^2.3.0",
     "rollup-plugin-esbuild": "^3.0.2",
     "tailwindcss": "^2.1.2",
-    "typescript": "^4.1.3",
-    "vite": "^2.4.4",
+    "typescript": "latest",
+    "vite": "latest",
     "vite-plugin-style-import": "^0.10.0",
-    "vue-tsc": "^0.0.15"
+    "vue-tsc": "latest"
   }
 }
