--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     },
     "allowSyntheticDefaultImports": true
   },
-  "include": ["src/*"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "src/assets"]
 }
