build: 替换插件版本

--- a/package.json
+++ b/package.json
@@ -9,41 +9,41 @@
   },
   "dependencies": {
     "@types/qs": "^6.9.7",
-    "@vueuse/core": "^4.11.0",
-    "ant-design-vue": "^2.2.2",
-    "axios": "^0.21.1",
-    "esbuild": "^0.14.12",
-    "less": "^4.1.1",
+    "@vueuse/core": "^4.11.2",
+    "ant-design-vue": "^3.0.0-beta.8",
+    "axios": "^0.21.4",
+    "esbuild": "^0.14.13",
+    "less": "^4.1.2",
     "less-loader": "^8.1.1",
-    "pinia": "^2.0.0-rc.4",
-    "qs": "^6.10.1",
+    "pinia": "^2.0.9",
+    "qs": "^6.10.3",
     "rollup": "^2.66.0",
     "vue": "next",
-    "vue-router": "^4.0.0-beta.13"
+    "vue-router": "^4.0.12"
   },
   "devDependencies": {
-    "@rollup/plugin-alias": "^3.1.1",
-    "@rollup/plugin-commonjs": "^15.0.0",
+    "@rollup/plugin-alias": "^3.1.9",
+    "@rollup/plugin-commonjs": "^15.1.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.24.0",
-    "@typescript-eslint/parser": "^4.24.0",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
     "@vitejs/plugin-vue": "latest",
     "@vue/compiler-sfc": "latest",
-    "autoprefixer": "^10.2.5",
-    "dotenv": "^8.2.0",
-    "eslint": "^7.30.0",
+    "autoprefixer": "^10.4.2",
+    "dotenv": "^8.6.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.23.2",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-vue": "^7.13.0",
-    "postcss": "^8.2.13",
-    "prettier": "^2.3.0",
-    "rollup-plugin-esbuild": "^3.0.2",
-    "tailwindcss": "^2.1.2",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-vue": "^7.20.0",
+    "postcss": "^8.4.5",
+    "prettier": "^2.5.1",
+    "rollup-plugin-esbuild": "^3.0.4",
+    "tailwindcss": "^2.2.19",
     "typescript": "latest",
     "vite": "latest",
-    "vite-plugin-style-import": "^0.10.0",
+    "vite-plugin-style-import": "^0.10.1",
     "vue-tsc": "latest"
   }
 }
